[package]
name = "cdotnode"
version = "1.2.0"
authors = ["Wei Tang <wei@that.world>", "Daogang Tang <daogangtang@gmail.com>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "cdotnode"
path = "src/main.rs"

[dependencies]
futures = "0.3"
log = "0.4"
structopt = "0.3"
codec = { package = "parity-scale-codec", version = "1.0.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sp-core = { path = "vendor/substrate/primitives/core" }
sp-timestamp = { path = "vendor/substrate/primitives/timestamp" }
sp-inherents = { path = "vendor/substrate/primitives/inherents" }
sp-transaction-pool = { path = "vendor/substrate/primitives/transaction-pool" }
sp-consensus = { path = "vendor/substrate/primitives/consensus/common" }
sp-finality-grandpa = { path = "vendor/substrate/primitives/finality-grandpa" }
sp-runtime = { path = "vendor/substrate/primitives/runtime" }
sc-cli = { path = "vendor/substrate/client/cli" }
sc-executor = { path = "vendor/substrate/client/executor" }
sc-service = { path = "vendor/substrate/client/service" }
sc-transaction-pool = { path = "vendor/substrate/client/transaction-pool" }
sc-network = { path = "vendor/substrate/client/network" }
sc-consensus-pow = { path = "vendor/substrate/client/consensus/pow" }
sc-consensus = { path = "vendor/substrate/client/consensus/common" }
sc-finality-grandpa = { path = "vendor/substrate/client/finality-grandpa" }
sc-client-api = { path = "vendor/substrate/client/api" }
sc-basic-authorship = { path = "vendor/substrate/client/basic-authorship" }

#pallet-rewards = { path = "frame/rewards" }
#pallet-eras = { path = "frame/eras" }
#kulupu-pow = { path = "pow" }
cdotnode-runtime = { path = "runtime" }
cdotnode-primitives = { path = "primitives" }

[build-dependencies]
substrate-build-script-utils = { path = "vendor/substrate/utils/build-script-utils" }

[features]
default = []
wasmtime = [
	"sc-executor/wasmtime",
	"sc-cli/wasmtime",
	"sc-service/wasmtime",
]

[workspace]
members = [
	"runtime",
]
#members = [
#	"runtime",
#	"pow",
#	"frame/rewards",
#	"frame/eras",
#]
exclude = ["vendor"]
