[package]
name = "cdotnode"
version = "1.2.0"
authors = ["Wei Tang <wei@that.world>", "Daogang Tang <daogangtang@gmail.com>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "cdotnode"
path = "src/main.rs"

[dependencies]
futures = "0.3"
log = "0.4"
structopt = "0.3"
codec = { package = "parity-scale-codec", version = "1.0.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc-core = "14.0.3"

sp-core = { path = "../substrate/primitives/core" }
sp-timestamp = { path = "../substrate/primitives/timestamp" }
sp-inherents = { path = "../substrate/primitives/inherents" }
sp-transaction-pool = { path = "../substrate/primitives/transaction-pool" }
sp-consensus = { path = "../substrate/primitives/consensus/common" }
sp-finality-grandpa = { path = "../substrate/primitives/finality-grandpa" }
sp-runtime = { path = "../substrate/primitives/runtime" }
sc-cli = { path = "../substrate/client/cli" }
sc-executor = { path = "../substrate/client/executor" }
sc-service = { path = "../substrate/client/service" }
sc-transaction-pool = { path = "../substrate/client/transaction-pool" }
sc-network = { path = "../substrate/client/network" }
sc-consensus-bftml = { path = "../substrate/client/consensus/bftml" }
sc-consensus = { path = "../substrate/client/consensus/common" }
sc-finality-grandpa = { path = "../substrate/client/finality-grandpa" }
sc-client-api = { path = "../substrate/client/api" }
sc-basic-authorship = { path = "../substrate/client/basic-authorship" }
sp-api = { path = "../substrate/primitives/api" }
sp-blockchain = { path = "../substrate/primitives/blockchain" }
sc-rpc-api = { path = "../substrate/client/rpc-api" }
substrate-frame-rpc-system = { path = "../substrate/utils/frame/rpc/system" }
pallet-transaction-payment-rpc = { path = "../substrate/frame/transaction-payment/rpc/" }
sp-block-builder = { path = "../substrate/primitives/block-builder" }
sc-keystore = { path = "../substrate/client/keystore" }
sc-rpc = { path = "../substrate/client/rpc" }

#pallet-rewards = { path = "frame/rewards" }
#pallet-eras = { path = "frame/eras" }
#kulupu-pow = { path = "pow" }
#kulupu-primitives = { path = "primitives" }

rhd = {path = "../rhd"}
cdotnode-primitives = { path = "primitives" }
cdotnode-runtime = { path = "runtime" }

[build-dependencies]
substrate-build-script-utils = { path = "../substrate/utils/build-script-utils" }

[features]
default = []
wasmtime = [
	"sc-executor/wasmtime",
	"sc-cli/wasmtime",
	"sc-service/wasmtime",
]

[workspace]
members = [
	"runtime",
]
#members = [
#	"runtime",
#	"pow",
#	"frame/rewards",
#	"frame/eras",
#]
exclude = ["vendor"]
