[package]
name = "rhd"
version = "0.1.0"
authors = ["Mike Tang <daogangtang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
futures = "0.3.4"
codec = { package = "parity-scale-codec", version = "1.3.1" }

sp-inherents = { version = "2.0.0-rc6", path = "../../../primitives/inherents" }
sp-core = { version = "2.0.0-rc6", path = "../../../primitives/core" }
sp-blockchain = { version = "2.0.0-rc6", path = "../../../primitives/blockchain" }
sp-io = { version = "2.0.0-rc6", path = "../../../primitives/io" }
sp-version = { version = "2.0.0-rc6", path = "../../../primitives/version" }
sp-api = { version = "2.0.0-rc6", path = "../../../primitives/api" }
sp-runtime = { version = "2.0.0-rc6", path = "../../../primitives/runtime" }
sp-timestamp = { version = "2.0.0-rc6", path = "../../../primitives/timestamp" }
sp-application-crypto = { version = "2.0.0-rc6", path = "../../../primitives/application-crypto" }
sp-block-builder = { version = "2.0.0-rc6", path = "../../../primitives/block-builder" }
sp-consensus = { version = "0.8.0-rc6", path = "../../../primitives/consensus/common" }
sc-network = { version = "0.8.0-rc6", path = "../../network" }
sc-network-gossip = { version = "0.8.0-rc6", path = "../../network-gossip" }
sc-keystore = { version = "2.0.0-rc6", path = "../../keystore" }
sc-client-api = { version = "2.0.0-rc6", path = "../../api" }
sc-block-builder = { version = "0.8.0-rc6", path = "../../../client/block-builder" }


