[package]
name = "cdotnode-runtime"
version = "1.2.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sp-std = { path = "../../substrate/primitives/std", default-features = false }
sp-io = { path = "../../substrate/primitives/io", default-features = false }
sp-version = { path = "../../substrate/primitives/version", default-features = false }
sp-core = { path = "../../substrate/primitives/core", default-features = false }
sp-runtime = { path = "../../substrate/primitives/runtime", default-features = false }
sp-offchain = { path = "../../substrate/primitives/offchain", default-features = false }
sp-consensus-pow = { path = "../../substrate/primitives/consensus/pow", default-features = false }
sp-session = { path = "../../substrate/primitives/session", default-features = false }
sp-api = { path = "../../substrate/primitives/api", default-features = false }
sp-block-builder = { path = "../../substrate/primitives/block-builder", default-features = false }
sp-transaction-pool = { path = "../../substrate/primitives/transaction-pool", default-features = false }
sp-inherents = { path = "../../substrate/primitives/inherents", default-features = false }
frame-support = { path = "../../substrate/frame/support", default-features = false }
frame-executive = { path = "../../substrate/frame/executive", default-features = false }
cdotnode-primitives = { path = "../primitives", default-features = false }
smallvec = "1.4.0"

system = { package = "frame-system", path = "../../substrate/frame/system", default-features = false }
balances = { package = "pallet-balances", path = "../../substrate/frame/balances", default-features = false }
utility = { package = "pallet-utility", path = "../../substrate/frame/utility", default-features = false }
indices = { package = "pallet-indices", path = "../../substrate/frame/indices", default-features = false }
timestamp = { package = "pallet-timestamp", path = "../../substrate/frame/timestamp", default-features = false }
transaction-payment = { package = "pallet-transaction-payment", path = "../../substrate/frame/transaction-payment", default-features = false }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", path = "../../substrate/frame/randomness-collective-flip", default-features = false }
democracy = { package = "pallet-democracy", path = "../../substrate/frame/democracy", default-features = false }
collective = { package = "pallet-collective", path = "../../substrate/frame/collective", default-features = false }
elections-phragmen = { package = "pallet-elections-phragmen", path = "../../substrate/frame/elections-phragmen", default-features = false }
membership = { package = "pallet-membership", path = "../../substrate/frame/membership", default-features = false }
treasury = { package = "pallet-treasury", path = "../../substrate/frame/treasury", default-features = false }
scheduler = { package = "pallet-scheduler", path = "../../substrate/frame/scheduler", default-features = false }
identity = { package = "pallet-identity", path = "../../substrate/frame/identity", default-features = false }
proxy = { package = "pallet-proxy", path = "../../substrate/frame/proxy", default-features = false }
vesting = { package = "pallet-vesting", path = "../../substrate/frame/vesting", default-features = false }
multisig = { package = "pallet-multisig", path = "../../substrate/frame/multisig", default-features = false }
#rewards = { package = "pallet-rewards", path = "../frame/rewards", default-features = false }
#eras = { package = "pallet-eras", path = "../frame/eras", default-features = false }
#difficulty = { package = "pallet-difficulty", path = "../frame/difficulty", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", path = "../../substrate/utils/wasm-builder-runner" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-version/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-offchain/std",
	"sp-consensus-pow/std",
	"sp-session/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",

	"system/std",
	"balances/std",
	"utility/std",
	"indices/std",
	"timestamp/std",
	"transaction-payment/std",
	"randomness-collective-flip/std",
	"democracy/std",
	"collective/std",
	"elections-phragmen/std",
	"membership/std",
	"treasury/std",
	"scheduler/std",
	"identity/std",
	"proxy/std",
	"vesting/std",
	"multisig/std",
]
