[package]
name = "pallet-difficulty"
version = "1.2.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
description = "Difficulty adjustment module for Kulupu."

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { path = "../../../substrate/primitives/std", default-features = false }
sp-core = { path = "../../../substrate/primitives/core", default-features = false }
sp-runtime = { path = "../../../substrate/primitives/runtime", default-features = false }
sp-timestamp = { path = "../../../substrate/primitives/timestamp", default-features = false }
frame-system = { path = "../../../substrate/frame/system", default-features = false }
frame-support = { path = "../../../substrate/frame/support", default-features = false }
pallet-timestamp = { path = "../../../substrate/frame/timestamp", default-features = false }
cdotnode-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-timestamp/std",
	"frame-support/std",
	"pallet-timestamp/std",
	"cdotnode-primitives/std",
]
